static/kube/mycaddy.yml
---
# Source: caddy-ingress-controller/templates/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycaddy-caddy-ingress-controller
  namespace: caddy-system
  labels:
    helm.sh/chart: caddy-ingress-controller-0.0.1-rc3
    app.kubernetes.io/name: caddy-ingress-controller
    app.kubernetes.io/instance: mycaddy
    app.kubernetes.io/managed-by: Helm
spec:
  type: "LoadBalancer"
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: caddy-ingress-controller
    app.kubernetes.io/instance: mycaddy
---
# Source: caddy-ingress-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycaddy-caddy-ingress-controller
  namespace: caddy-system
  labels:
    helm.sh/chart: caddy-ingress-controller-0.0.1-rc3
    app.kubernetes.io/name: caddy-ingress-controller
    app.kubernetes.io/instance: mycaddy
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: caddy-ingress-controller
      app.kubernetes.io/instance: mycaddy
  template:
    metadata:
      labels:
        helm.sh/chart: caddy-ingress-controller-0.0.1-rc3
        app.kubernetes.io/name: caddy-ingress-controller
        app.kubernetes.io/instance: mycaddy
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: caddy-ingress-controller
      securityContext: {}
      containers:
        - name: caddy-ingress-controller
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            runAsGroup: 0
            runAsUser: 0
          image: "caddy/ingress:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: metrics
              containerPort: 9765
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          args:
            - -config-map=caddy-ingress-controller-configmap
      volumes:
        - name: tmp
          emptyDir: {}
